# solana-signet-program

./: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  Procfile  README.md  eslint.config.mjs  package.json
.github/workflows/: ci.yml  docker-build.yml  docker-publish.yml  fakenet-docker-publish.yml  radar.yml  tests.yml
chain-signatures-project/: Anchor.toml
chain-signatures-project/tests/: chain-signatures-project.ts
clients/deploy-client/: README.md  deploy.ts  package.json
clients/request-client/: kdf.ts  package.json  sig-client.ts
clients/response-server/: Procfile  README.md  chain-utils.ts  config.ts  cpi-event-parser.ts  crypto-utils.ts  envConfig.ts  ethereum-monitor.ts  index.ts  output-serializer.ts  package.json  request-id-generator.ts  run.ts  sig-server.ts  solana-utils.ts  transaction-processor.ts
docs/: parallel-utxo-signing-architecture.md
fakenet-signer/: CLAUDE.md  Dockerfile  README.md  index.ts  package.json  tsconfig.json  tsdown.config.ts
fakenet-signer/idl/: chain_signatures.json
signet-program/: .env.example  .gitignore  .prettierignore  Anchor.toml  Cargo.toml  call-sign.ts  eslint.config.mjs  package.json  tsconfig.json
signet-program/programs/signet/: Cargo.toml  README.md
signet-program/programs/signet/src/: evm.rs  lib.rs
signet-program/test-utils/: MockCPISignerServer.ts  MockSignerServer.ts  SignatureRespondedSubscriber.ts  constants.ts  networkConfig.ts  setup.ts  sign.ts  signingUtils.ts  solana.ts  testEnvConfig.ts  testSetup.ts  types.ts  utils.ts
signet-program/testing/: Cargo.toml
(+109 files in other folders)
