[package]
name = "signet"
version = "0.1.0"
description = "SigNet program to request signatures from the network"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "signet"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

